# copy_cpp

./: CMakeLists.txt  Makefile  copy  copy.cpp  test  test.cpp
clip_custom/: clip.cpp  clip_x11.cpp
